[package]
name = "dantehh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
image = "0.25.1"
imageproc = "0.25.0"
lazy_static = "1.5.0"
rand = "0.8.5"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
toml = "0.8.14"
